<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/title_tourism"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkcyan"
                android:text="@string/Where"
                android:textSize="20dp"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:layout_weight="0.5"
                android:background="@drawable/background_menu_2">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="120dp"
                        android:background="@drawable/border_decoration_brown"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="120dp"
                            android:src="@drawable/minuevobohio_restaurant"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_restaurant_miviejobohio"
                            android:textColor="@color/darkred"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/description_restaurant_miviejobohio"
                            android:textSize="12dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkcyan"
                android:text="@string/what_cheese"
                android:textSize="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_brown"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/queso"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_cheese"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_cheese"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkcyan"
                android:text="@string/What"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_brown"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/rafting_urrao"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_rafting"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_rafting"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_brown"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/canoeing_urrao"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_canoeing_kayaking"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_canoeing_kayaking"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkcyan"
                android:text="@string/title_paramo"
                android:textSize="20dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_weight="0.5"
        android:background="@drawable/background_menu_2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="120dp"
                android:background="@drawable/border_decoration_brown"
                android:gravity="center">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:src="@drawable/paramo_del_sol"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center"
                >



                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description_paramo"
                    android:textSize="12dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_brown"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/orquidea"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_orquidea"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_orquidea"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_brown"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/frailejon"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_frai"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_frai"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_brown"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/bear"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_bear"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_bear"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</ScrollView>