<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/title_bars"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:layout_weight="0.5"
                android:background="@drawable/background_menu_2">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="120dp"
                        android:background="@drawable/border_decoration_blue"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="120dp"
                            android:src="@drawable/fonda_sanjose"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_fonda_sanjose"
                            android:textColor="@color/darkred"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/description_fonda_sanjose"
                            android:textSize="12dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_blue"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/elfogon_fonda"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_fonda_elfogon"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_fonda_elfogon"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:layout_weight="0.5"
            android:background="@drawable/background_menu_2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="120dp"
                    android:background="@drawable/border_decoration_blue"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="120dp"
                        android:src="@drawable/lamulera_fonda"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:gravity="center"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_fonda_lamulera"
                        android:textColor="@color/darkred"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/description_fonda_lamulera"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</ScrollView>